--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "firebase": "^12.3.0",
     "next": "15.5.4",
     "react": "19.1.0",
