--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^12.3.0",
     "lucide-react": "^0.552.0",
     "next": "15.5.4",
+    "next-intl": "^4.5.5",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
