--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
-    "next": "15.5.4",
+    "next": "^16.0.7",
     "next-intl": "^4.5.5",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
